Initial Jenkins-Ansible RHEL patching setup

--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,5 +1,6 @@
 [client]
-10.198.91.55 ansible_host=10.198.91.55 ansible_user=ec2-user ansible_become=yes
+10.198.91.55 ansible_user=jenkins ansible_ssh_private_key_file=/home/jenkins/.ssh/id_rsa ansible_become=yes
+
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
