--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [client]
-10.198.91.55 ansible_user=jenkins ansible_ssh_private_key_file=/home/jenkins/.ssh/id_rsa ansible_become=yes
+10.198.91.55 ansible_user=jenkins ansible_become=yes ansible_ssh_private_key_file=/var/lib/jenkins/.ssh/id_rsa
 
 
 [all:vars]
